# hermes-agent-3ds

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
assets/: README.md
bridge/: .env.example  README.md  pyproject.toml
bridge/src/hermes_3ds_bridge/: app.py  auth.py  config.py  main.py  models.py  responder.py  shaping.py
bridge/src/hermes_agent_3ds_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridge/tests/: conftest.py  test_api.py  test_app.py  test_auth.py  test_config.py  test_responder.py  test_timeout_behavior.py
client/: Makefile  README.md  nintendo_ds_bios_ascii.txt
client/include/: app_config.h  app_conversations.h  app_gfx.h  app_home.h  app_input.h  app_requests.h  app_settings.h  app_theme.h  app_ui.h  bridge_chat.h  bridge_health.h  bridge_v2.h  picture_input.h  voice_input.h
client/source/: app_config.c  app_conversations.c  app_gfx.c  app_home.c  app_input.c  app_requests.c  app_settings.c  app_theme.c  app_ui.c  bridge_chat.c  bridge_health.c  bridge_v2.c  main.c  picture_input.c  voice_input.c
docs/: architecture.md  current-status.md  design-language.md  hermes-pictochat-clone-spec.md  hermes-pictochat-dark-mode-spec.md  implementation-plan.md  install.md  mvp-spec.md  pixel-rpg-visual-direction.md  research-notes.md  roadmap.md  ui-phase1-hermes-handheld.md  ui-phase2-hermes-handheld.md  ui-phase3-hermes-handheld.md  vision.md
(+18 files in other folders)
